# PalRest

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENT.MD  Dockerfile  README.md  config.example.yaml  go.mod  go.sum
.github/workflows/: overlay-release.yml  overlay.yml
cmd/playtime-guard/: main.go
deploy/grafana/: README.md  palrest-dashboard.json
internal/analytics/: service.go  service_test.go
internal/api/: analytics.go  analytics_test.go  auth.go  live.go  metrics.go  metrics_test.go  overlay.go  overlay_test.go  save_import.go  server.go  server_test.go  timeline.go  timeline_test.go
internal/app/: app.go  app_test.go
internal/behavior/: metrics.go  metrics_test.go
internal/config/: config.go  config_test.go
internal/domain/: types.go
internal/guard/: service.go  service_test.go
internal/observation/: gamedata_live.go  server.go  server_canonical.go  server_canonical_test.go  server_documents.go  server_documents_test.go  server_durability_test.go  server_metrics.go  server_metrics_test.go  (+5 more)
overlay/: .gitignore  README.md  index.html  package-lock.json  package.json
overlay/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: icon.icns
overlay/src-tauri/src/: config.rs  http.rs  lib.rs  lifecycle.rs  main.rs  process.rs  tray.rs
overlay/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
script/: download-map-tiles.sh
webui/: .gitignore  Caddyfile  Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
(+170 files in other folders)
